# advent-of-code-2022

./: CMakeLists.txt  README.md
day01/: main.cpp
include/common/: debug.hpp  util.hpp
src/common/: debug.cpp  util.cpp
src/day01/: main.cpp
src/day02/: main.cpp
src/day03/: main.cpp
